--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "github-profile-scrapper",
   "version": "0.0.1",
   "private": false,
-  "main": "index.js",
+  "main": "main.js",
   "repository": {
     "type": "git",
     "url": "git://github.com/dkunin/github-profile-scrapper.git"
@@ -12,7 +12,7 @@
   },
   "scripts": {
     "test": "echo test",
-    "start": "node ./",
+    "start": "electron .",
     "dev": "node ./",
     "build": "NODE_ENV=production node ./"
   },
@@ -21,6 +21,7 @@
   "license": "MIT",
   "description": "> This is an example file with default selections.",
   "dependencies": {
+    "electron": "2.0.4",
     "superagent": "3.5.2",
     "x-ray": "2.3.2"
   }
