--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,7 @@
 {
     "extends": "eslint:recommended",
     "rules": {
-        "no-console": 1,
+        "no-console": 0,
         "valid-jsdoc": 2,
         "no-underscore-dangle": 2,
         "no-empty": [
@@ -17,12 +17,6 @@
             }
         ],
         "no-with": 2,
-        "brace-style": [
-            2,
-            "stroustrup", {
-                "allowSingleLine": true
-            }
-        ],
         "no-mixed-spaces-and-tabs": 2,
         "no-multiple-empty-lines": 2,
         "no-multi-str": 2,
@@ -66,10 +60,6 @@
                 "named": "never"
             }
         ],
-        "array-bracket-spacing": [
-            2,
-            "always"
-        ],
         "space-in-parens": [
             2,
             "never"
@@ -98,7 +88,7 @@
         ],
         "dot-notation": 2,
         "eol-last": 2,
-        "wrap-iife": 2,
+        "wrap-iife": [2, "any"],
         "semi": [
             2,
             "always"
@@ -148,7 +138,9 @@
         ]
     },
     "globals": {
-        "Vue": true
+        "Vue": true,
+        "Vuex": true,
+        "VueResource": true
     },
     "env": {
         "browser": true,
@@ -156,30 +148,35 @@
         "node": true,
         "worker": true
     },
-    "ecmaFeatures": {
-        "arrowFunctions": true,
-        "binaryLiterals": true,
-        "blockBindings": true,
-        "classes": true,
-        "defaultParams": true,
-        "destructuring": true,
-        "forOf": true,
-        "generators": true,
-        "modules": true,
-        "objectLiteralComputedProperties": true,
-        "objectLiteralDuplicateProperties": true,
-        "objectLiteralShorthandMethods": true,
-        "objectLiteralShorthandProperties": true,
-        "octalLiterals": true,
-        "regexUFlag": true,
-        "regexYFlag": true,
-        "restParams": true,
-        "spread": true,
-        "superInFunctions": true,
-        "templateStrings": true,
-        "unicodeCodePointEscapes": true,
-        "globalReturn": true,
-        "experimentalObjectRestSpread": true
+    "parserOptions": {
+        "ecmaVersion": 2017,
+        "sourceType": "module",
+        "ecmaFeatures": {
+            "arrowFunctions": true,
+            "binaryLiterals": true,
+            "blockBindings": true,
+            "classes": true,
+            "defaultParams": true,
+            "destructuring": true,
+            "forOf": true,
+            "generators": true,
+            "modules": true,
+            "objectLiteralComputedProperties": true,
+            "objectLiteralDuplicateProperties": true,
+            "objectLiteralShorthandMethods": true,
+            "objectLiteralShorthandProperties": true,
+            "octalLiterals": true,
+            "regexUFlag": true,
+            "regexYFlag": true,
+            "restParams": true,
+            "spread": true,
+            "superInFunctions": true,
+            "templateStrings": true,
+            "unicodeCodePointEscapes": true,
+            "globalReturn": true,
+            "experimentalObjectRestSpread": true
+        }
+
     },
     "plugins": []
 }
